2011-02-26  Murray Cumming  <murrayc@murrayc.com>

	Fix the CSV import test.

	* tests/import/test_parsing.cc: Correct the number of expected tokens.
	This was previously just the number that was (incorrectly) parsed before.

2011-02-26  Murray Cumming  <murrayc@murrayc.com>

	CSV Import: Fix quoted-newline detection, so we don't drop rows.

	* glom/import_csv/csv_parser.[h|cc]: on_idle_parse(): Make in_quotes a 
	member variable, initialized in clear(), so we remember it across calls to 
	on_idle_parse(), instead of thinking that we are in quotes just because we 
	are parsing arbitrary chunks of bytes that look that way individually.
	
	This fixes bug #637529 (Darmon Xavier), so all rows should be imported 
	instead of dropping some in the middle.

2011-02-25  Murray Cumming  <murrayc@murrayc.com>

	Avoid GTK+ warning when clicking on the list button.

	* glom/mode_data/db_adddel/db_adddel.[h|cc]: on_cell_button_clicked(): 
	Delay the response to the click, to an idle handler, to avoid confusing 
	GtkTreeView, which was showing a warning with GTK+ 3 about a NULL GtkAdjustment.

2011-01-06  Murray Cumming  <murrayc@murrayc.com>

	get_current_locale(): Handle more complex setlocale(NULL) results.
 
	* glom/libglom/utils.cc: locale_simplify(): On Ubuntu Natty, 
	setlocale() has started returning a more complex string. Parse it, or the 
	older simpler syntax.

2010-12-15  Ben Konrath  <ben@bagu.org>

	Add Eclipse 3.6 / CDT 7.0 configuration files.

	* .cproject: New file generated by Eclipse.
	* .project: New file generated by Eclipse.

2010-12-13  Murray Cumming  <murrayc@murrayc.com>

	Correct my previous commit.

	* configure.ac: Correct the no/yes test for --enable-glom-ui and add a comma 
	so it actually works.
	* Makefile_tests.am: Restore the source file lists for the python tests.

2010-12-13  Murray Cumming  <murrayc@murrayc.com>

	Allow libglom to be built without building the Glom UI code too.
	