@@ -1,3 +1,10 @@
+2011-03-14  Murray Cumming  <murrayc@murrayc.com>
+
+	libglom_init(): Show the python exception when PyDateTime_IMPORT fails.
+
+	* glom/libglom/init.cc: The linker seems to behave differently when this 
+	code is run from inside a JVM in OnlineGlom. This gives us a clue.
+
 2011-02-26  Murray Cumming  <murrayc@murrayc.com>
 
 	Fix the CSV import test.
